Finished faq.html / created quote.html

--- a/src/business.html
+++ b/src/business.html
@@ -17,13 +17,7 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="body-home">
-
-    <div class="navbar__top">
-        <div class="navbar__container">
-            <p>Want to speak with a human? Call: <span class="navbar__phone">028 90 111 111</span></p>
-        </div>
-    </div>
+<body class="grid-12">
 
     <div class="navbar-top">
         <div class="navbar-inner">
@@ -49,9 +43,105 @@
         </div>
     </nav>
 
+    <header class="storage">
+        <div class="storage__inner">
+            <div class="storage__inner__info">
+                <h1>Business Storage</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptate quod!Consequuntur? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quam
+                    cupiditate
+                    voluptatum similique. Architecto sunt, mollitia iure obcaecati harum, dolorem neque consequuntur
+                    atque
+                    aliquid cupiditate at quidem, ipsa beatae eaque dolore.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+            </div>
+            <div class="storage__inner__img"></div>
+        </div>
+    </header>
+
+    <div class="why-us">
+        <div class="why-us__inner">
+            <h3>Store with us</h3>
+            <p>Why we are the best place for your possessions...</p>
+            <div class="list">
+                <ul class="list__why-us">
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                </ul>
+                <ul class="list__why-us">
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
+                        tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
+                        repellat id?</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <div class="access">
+        <h3>Fully Secure Self-Storage</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+        <p>Unlimited access to your goods during our Opening Hours:</p>
+        <ul>
+            <li>Mon to Fri 8.30am to 6pm</li>
+            <li>Sat 9.00am to 4pm</li>
+            <li>(Closed Sunday and Public Holidays)</li>
+        </ul>
+    </div>
+
+    <div class="flexible">
+        <div class="flexible__inner">
+            <div class="flexible__inner__img"></div>
+            <div class="flexible__inner__info">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+                    inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+                    voluptatequod!Consequuntur?</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="security">
+        <h3>Security</h3>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
+            inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
+            voluptatequod!Consequuntur?</p>
+    </div>
+
+    <div class="quote">
+        <h3>Looking for space?</h3>
+        <p>We offer a wide range of sizes</p>
+        <button>Quote</button>
+    </div>
 
 
-    <h1>business</h1>
+
+
 
 
 
@@ -114,18 +204,6 @@
             <small>Website created by <a href="#">Liam McAllister</a></small>
         </div>
     </footer>
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
