--- a/src/house.html
+++ b/src/house.html
@@ -43,9 +43,9 @@
         </div>
     </nav>
 
-    <header class="house-header">
-        <div class="header__inner">
-            <div class="house-header__info">
+    <header class="storage">
+        <div class="storage__inner">
+            <div class="storage__inner__info">
                 <h1>Household Storage</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
                     inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
@@ -58,7 +58,7 @@
                     inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
                     voluptatequod!Consequuntur?</p>
             </div>
-            <div class="house-header__img"></div>
+            <div class="storage__inner__img"></div>
         </div>
     </header>
 
