--- a/src/quote.html
+++ b/src/quote.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | FAQ's</title>
+    <title>Self Storage Theme | Quote</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -43,25 +43,6 @@
         </div>
     </nav>
 
-    <div class="faq">
-        <h1>Frequently Asked Questions</h1>
-        <ul id="accordian" class="accordian">
-            <li class="question">Question 1</li>
-            <li class="answer">Answer 1</li>
-            <li class="question">Question 2</li>
-            <li class="answer">Answer 2</li>
-            <li class="question">Question 3</li>
-            <li class="answer">Answer 3</li>
-            <li class="question">Question 4</li>
-            <li class="answer">Answer 4</li>
-            <li class="question">Question 5</li>
-            <li class="answer">Answer 5</li>
-            <li class="question">Question 6</li>
-            <li class="answer">Answer 6</li>
-            <li class="question">Question 7</li>
-            <li class="answer">Answer 7</li>
-        </ul>
-    </div>
 
 
 
@@ -77,7 +58,7 @@
 
 
 
-
+    
 
 
     <footer>
@@ -126,6 +107,18 @@
             <small>Website created by <a href="#">Liam McAllister</a></small>
         </div>
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
