--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
             <h1 class="header-top">Storage</h1>
             <h1 class="header-middle">Made</h1>
             <h1 class="header-bottom">Easy</h1>
-            <button class="btn-large">Get my free quote</button>
+            <button class="btn-large"><a href="quote.html">Get my free quote</a></button>
         </div>
     </header>
 
