--- a/src/quote.html
+++ b/src/quote.html
@@ -43,55 +43,70 @@
         </div>
     </nav>
 
-    <header>
-        <h1>Get a Quote</h1>
-    </header>
+    <div class="quote-container">
 
-    <div class="quote-form">
-        <form>
-            <label for="firstName">First Name:</label>
-            <input type="text" id="firstName" />
+        <div class="quote-info">
+            <h1>Get a Quote</h1>
+            <small>* Required Field</small>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum et quaerat eos ea neque officia
+                blanditiis! Laborum eligendi facere architecto quidem, deleniti qui reiciendis eius aliquam totam! Quos,
+                quis voluptates.</p>
+        </div>
 
-            <label for="lastName">Last Name:</label>
-            <input type="text" id="lastName" />
+        <div class="quote-form">
+            <form>
+                <div class="quote-form__inner">
+                    <div class="left">
+                        <label for="firstName">* First Name:</label>
+                        <input type="text" id="firstName" />
 
-            <label for="email">Email:</label>
-            <input type="email" id="email">
+                        <label for="lastName">* Last Name:</label>
+                        <input type="text" id="lastName" />
 
-            <label for="phone">Phone:</label>
-            <input type="tel" id="phone">
+                        <label for="email">* Email:</label>
+                        <input type="email" id="email" />
 
-            <label for="address">Address:</label>
-            <input type="text" id="address">
+                        <label for="phone">* Phone:</label>
+                        <input type="tel" id="phone" />
+                    </div>
 
-            <label for="sizes">Choose a size:</label>
-            <select name="sizes" id="sizes">
-                <option value="">Please select an option</option>
-                <option value="locker">Locker</option>
-                <option value="25sqft">25 square feet</option>
-                <option value="35sqft">35 square feet</option>
-                <option value="50sqft">50 square feet</option>
-                <option value="75sqft">75 square feet</option>
-                <option value="100sqft">100 square feet</option>
-                <option value="125sqft">125 square feet</option>
-                <option value="150sqft">150 square feet</option>
-            </select>
+                    <div class="right">
+                        <label for="address">Address:</label>
+                        <input type="text" id="address" />
 
-            <label for="how-long">How long for?</label>
-            <select name="how-long" id="how-long">
-                <option value="">Please select an option</option>
-                <option value="1-4w">1 to 4 weeks</option>
-                <option value="1-3m">1 to 3 months</option>
-                <option value="3-6m">3 to 6 months</option>
-                <option value="6-12m">6 to 12 months</option>
-                <option value="12+m">12+ months</option>
-            </select>
+                        <label for="sizes">* Choose a size:</label>
+                        <select name="sizes" id="sizes">
+                            <option value="">Please select an option</option>
+                            <option value="locker">Locker</option>
+                            <option value="25sqft">25 square feet</option>
+                            <option value="35sqft">35 square feet</option>
+                            <option value="50sqft">50 square feet</option>
+                            <option value="75sqft">75 square feet</option>
+                            <option value="100sqft">100 square feet</option>
+                            <option value="125sqft">125 square feet</option>
+                            <option value="150sqft">150 square feet</option>
+                        </select>
 
-            <label for="date">When do you need it?</label>
-            <input type="date" id="date">
+                        <label for="how-long">* How long for?</label>
+                        <select name="how-long" id="how-long">
+                            <option value="">Please select an option</option>
+                            <option value="1-4w">1 to 4 weeks</option>
+                            <option value="1-3m">1 to 3 months</option>
+                            <option value="3-6m">3 to 6 months</option>
+                            <option value="6-12m">6 to 12 months</option>
+                            <option value="12+m">12+ months</option>
+                        </select>
 
-            <textarea name="message" id="message" cols="30" rows="10"></textarea>
-        </form>
+                        <label for="date">* When do you need it?</label>
+                        <input type="date" id="date" />
+                    </div>
+                </div>
+
+                <textarea name="message" id="message" placeholder="Message"></textarea>
+
+                <button type="submit" class="btn">Submit</button>
+            </form>
+        </div>
     </div>
 
 
