--- a/src/about.html
+++ b/src/about.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | FAQ's</title>
+    <title>Self Storage Theme | About Us</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -43,32 +43,7 @@
         </div>
     </nav>
 
-    <div class="faq">
-        <h1>Frequently Asked Questions</h1>
-        <ul id="accordian" class="accordian">
-            <li class="question">Question 1</li>
-            <li class="answer">Answer 1</li>
-            <li class="question">Question 2</li>
-            <li class="answer">Answer 2</li>
-            <li class="question">Question 3</li>
-            <li class="answer">Answer 3</li>
-            <li class="question">Question 4</li>
-            <li class="answer">Answer 4</li>
-            <li class="question">Question 5</li>
-            <li class="answer">Answer 5</li>
-            <li class="question">Question 6</li>
-            <li class="answer">Answer 6</li>
-            <li class="question">Question 7</li>
-            <li class="answer">Answer 7</li>
-        </ul>
-    </div>
-
-
-
-
-
-
-
+    
 
 
 
@@ -107,17 +82,17 @@
             <div class="footer-middle__links">
                 <h3>Company Info</h3>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="cookie.html">Cookie Policy</a></li>
                 </ul>
             </div>
             <div class="footer-middle__links">
                 <h3>Customer Support</h3>
                 <ul>
-                    <li><a href="#">FAQ's</a></li>
-                    <li><a href="#">Storage Checklist</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="faq.html">FAQ's</a></li>
+                    <li><a href="checklist.html">Storage Checklist</a></li>
+                    <li><a href="sitemap.html">Site Map</a></li>
                 </ul>
             </div>
         </div>
@@ -126,6 +101,18 @@
             <small>Website created by <a href="#">Liam McAllister</a></small>
         </div>
     </footer>
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
