--- a/src/packing.html
+++ b/src/packing.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Self Storage Theme | FAQ's</title>
+    <title>Self Storage Theme | Packing Supplies</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
@@ -43,26 +43,82 @@
         </div>
     </nav>
 
-    <div class="faq">
-        <h1>Frequently Asked Questions</h1>
-        <ul id="accordian" class="accordian">
-            <li class="question">Question 1</li>
-            <li class="answer">Answer 1</li>
-            <li class="question">Question 2</li>
-            <li class="answer">Answer 2</li>
-            <li class="question">Question 3</li>
-            <li class="answer">Answer 3</li>
-            <li class="question">Question 4</li>
-            <li class="answer">Answer 4</li>
-            <li class="question">Question 5</li>
-            <li class="answer">Answer 5</li>
-            <li class="question">Question 6</li>
-            <li class="answer">Answer 6</li>
-            <li class="question">Question 7</li>
-            <li class="answer">Answer 7</li>
-        </ul>
+    <div class="packing">
+        <div class="packing__inner">
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Small Box</h3>
+                    <p class="card__caption__text">£2.50 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Medium Box</h3>
+                    <p class="card__caption__text">£3.50 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Large Box</h3>
+                    <p class="card__caption__text">£4.50 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Tape</h3>
+                    <p class="card__caption__text">£2.50 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Padlock</h3>
+                    <p class="card__caption__text">£5.00 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Sofa Cover</h3>
+                    <p class="card__caption__text">£4.00 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Matress Cover</h3>
+                    <p class="card__caption__text">£4.00 each</p>
+                </div>
+            </div>
+            <div class="card card--packing">
+                <div class="card__img">
+                    <img src="/src/images/1.jpg" alt="">
+                </div>
+                <div class="card__caption">
+                    <h3 class="card__caption__header">Bubblewrap (5 meters)</h3>
+                    <p class="card__caption__text">£3.00 each</p>
+                </div>
+            </div>
+        </div>
     </div>
-
 
 
 
