--- a/src/business.html
+++ b/src/business.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="/src/styles/css/styles.css">
 </head>
 
-<body class="grid-12">
+<body class="grid">
 
     <div class="navbar-top">
         <div class="navbar-inner">
