--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
     <div class="services">
         <div class="services__inner">
             <div class="card">
-                <a href="#">
+                <a href="house.html">
                     <div class="card__img">
                         <img src="/src/images/1.jpg" alt="">
                     </div>
@@ -67,7 +67,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="business.html">
                     <div class="card__img">
                         <img src="/src/images/1.jpg" alt="">
                     </div>
@@ -79,7 +79,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="student.html">
                     <div class="card__img">
                         <img src="/src/images/1.jpg" alt="">
                     </div>
@@ -91,7 +91,7 @@
                 </a>
             </div>
             <div class="card">
-                <a href="#">
+                <a href="packing.html">
                     <div class="card__img">
                         <img src="/src/images/1.jpg" alt="">
                     </div>
@@ -184,17 +184,17 @@
             <div class="footer-middle__links">
                 <h3>Company Info</h3>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="cookie.html">Cookie Policy</a></li>
                 </ul>
             </div>
             <div class="footer-middle__links">
                 <h3>Customer Support</h3>
                 <ul>
-                    <li><a href="#">FAQ's</a></li>
-                    <li><a href="#">Storage Checklist</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="faq.html">FAQ's</a></li>
+                    <li><a href="checklist.html">Storage Checklist</a></li>
+                    <li><a href="sitemap.html">Site Map</a></li>
                 </ul>
             </div>
         </div>
