--- a/src/house.html
+++ b/src/house.html
@@ -19,13 +19,11 @@
 
 <body class="grid">
 
-    <div class="navbar-top">
-        <div class="navbar-inner">
+    <nav class="navbar">
+        <div class="navbar__top">
             <p>Want to speak with a human? Call: <span class="navbar-inner__phone">028 90 111 111</span></p>
         </div>
-    </div>
-    <nav class="navbar-bottom">
-        <div class="navbar-inner">
+        <div class="navbar__bottom">
             <a href="index.html"><img class="navbar-inner__logo" src="/src/images/box-white.svg" alt="Company Logo"></a>
             <input class="burger-btn" type="checkbox" id="burger-btn" />
             <label class="burger-label" for="burger-btn">
@@ -33,12 +31,12 @@
                 <span class="bar middle"></span>
                 <span class="bar bottom"></span>
             </label>
-            <ul class="navbar-inner__nav">
-                <li class="nav__item"><a href="house.html" class="nav__link">House</a></li>
-                <li class="nav__item"><a href="business.html" class="nav__link">Business</a></li>
-                <li class="nav__item"><a href="student.html" class="nav__link">Student</a></li>
-                <li class="nav__item"><a href="packing.html" class="nav__link">Packing Supplies</a></li>
-                <li class="nav__item"><a href="faq.html" class="nav__link">FAQ's</a></li>
+            <ul class="navbar__bottom__nav">
+                <li class="nav-item"><a href="house.html" class="nav-link">House</a></li>
+                <li class="nav-item"><a href="business.html" class="nav-link">Business</a></li>
+                <li class="nav-item"><a href="student.html" class="nav-link">Student</a></li>
+                <li class="nav-item"><a href="packing.html" class="nav-link">Packing Supplies</a></li>
+                <li class="nav-item"><a href="faq.html" class="nav-link">FAQ's</a></li>
             </ul>
         </div>
     </nav>
@@ -66,8 +64,8 @@
         <div class="why-us__inner">
             <h3>Store with us</h3>
             <p>Why we are the best place for your possessions...</p>
-            <div class="list">
-                <ul class="list__why-us">
+            <div class="why-us__inner__lists">
+                <ul>
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
@@ -78,7 +76,7 @@
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
                 </ul>
-                <ul class="list__why-us">
+                <ul>
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
@@ -136,7 +134,7 @@
     <div class="quote">
         <h3>Looking for space?</h3>
         <p>We offer a wide range of sizes</p>
-        <button>Quote</button>
+        <button><a href="quote.html">Quote</a></button>
     </div>
 
 
@@ -158,23 +156,23 @@
 
 
 
-    <footer>
-        <div class="footer-top">
-            <div class="footer-top__left">
-                <img class="footer-top__icon" src="/src/images/phone.svg" alt="">
+    <footer class=footer>
+        <div class="footer__top">
+            <div class="footer__top__left">
+                <img class="footer__top-icon" src="/src/images/phone.svg" alt="">
                 <span>028 90 111 111</span>
-                <img class="footer-top__icon" src="/src/images/email.svg" alt="">
+                <img class="footer__top-icon" src="/src/images/email.svg" alt="">
                 <span>info@company.com</span>
             </div>
-            <div class="footer-top__right">
-                <a href="#"><img class="footer-top__icon" src="/src/images/facebook.svg" alt=""></a>
-                <a href="#"><img class="footer-top__icon" src="/src/images/twitter.svg" alt=""></a>
-                <a href="#"><img class="footer-top__icon" src="/src/images/youtube.svg" alt=""></a>
-                <a href="#"><img class="footer-top__icon" src="/src/images/google.svg" alt=""></a>
+            <div class="footer__top__right">
+                <a href="#"><img class="footer__top-icon" src="/src/images/facebook.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="/src/images/twitter.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="/src/images/youtube.svg" alt=""></a>
+                <a href="#"><img class="footer__top-icon" src="/src/images/google.svg" alt=""></a>
             </div>
         </div>
-        <div class="footer-middle">
-            <div class="footer-middle__links">
+        <div class="footer__middle">
+            <div class="footer__middle__links">
                 <h3>Storage Type</h3>
                 <ul>
                     <li><a href="house.html">House Storage</a></li>
@@ -182,31 +180,28 @@
                     <li><a href="student.html">Student Storage</a></li>
                 </ul>
             </div>
-            <div class="footer-middle__links">
+            <div class="footer__middle__links">
                 <h3>Company Info</h3>
                 <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Cookie Policy</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="cookie.html">Cookie Policy</a></li>
                 </ul>
             </div>
-            <div class="footer-middle__links">
+            <div class="footer__middle__links">
                 <h3>Customer Support</h3>
                 <ul>
-                    <li><a href="#">FAQ's</a></li>
-                    <li><a href="#">Storage Checklist</a></li>
-                    <li><a href="#">Site Map</a></li>
+                    <li><a href="faq.html">FAQ's</a></li>
+                    <li><a href="checklist.html">Storage Checklist</a></li>
+                    <li><a href="sitemap.html">Site Map</a></li>
                 </ul>
             </div>
         </div>
-        <div class="footer-bottom">
+        <div class="footer__bottom">
             <small>&copy; Storage Company 2020</small>
             <small>Website created by <a href="#">Liam McAllister</a></small>
         </div>
     </footer>
-
-
-
 
 
 
