Finished about.html layout

--- a/src/about.html
+++ b/src/about.html
@@ -42,7 +42,7 @@
     </nav>
 
     <div class="about">
-        <div class="about__inner">
+        <div class="about__top">
             <div class="about__info">
                 <h1>About Us</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe accusantium, ut tempore soluta commodi
@@ -56,6 +56,8 @@
             <div class="about__img">
                 <img src="/src/images/1.jpg" alt="">
             </div>
+        </div>
+        <div class="about__bottom">
             <div class="about__list">
                 <ul>
                     <li>Some text</li>
@@ -67,16 +69,6 @@
             </div>
         </div>
     </div>
-
-
-
-
-
-
-
-
-
-
 
     <footer class=footer>
         <div class="footer__top">
@@ -125,35 +117,7 @@
         </div>
     </footer>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <button id="btn-to-top" class="btn-to-top">&#94;</button>
-
-
-
-
-
-
-
-
 
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
