--- a/src/house.html
+++ b/src/house.html
@@ -106,7 +106,9 @@
 
     <div class="flexible">
         <div class="flexible__inner">
-            <div class="flexible__inner__img"></div>
+            <div class="flexible__inner__img">
+                <img src="/src/images/1.jpg" alt="">
+            </div>
             <div class="flexible__inner__info">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
                     inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
