--- a/src/student.html
+++ b/src/student.html
@@ -64,8 +64,8 @@
         <div class="why-us__inner">
             <h3>Store with us</h3>
             <p>Why we are the best place for your possessions...</p>
-            <div class="list">
-                <ul class="list__why-us">
+            <div class="why-us__inner__lists">
+                <ul>
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
@@ -76,7 +76,7 @@
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
                 </ul>
-                <ul class="list__why-us">
+                <ul>
                     <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde doloribus cum libero quae error
                         tenetur exercitationem enim fugiat at iusto eligendi, illum ea laborum corrupti ad aliquam eius
                         repellat id?</li>
@@ -106,7 +106,9 @@
 
     <div class="flexible">
         <div class="flexible__inner">
-            <div class="flexible__inner__img"></div>
+            <div class="flexible__inner__img">
+                <img src="/src/images/1.jpg" alt="">
+            </div>
             <div class="flexible__inner__info">
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam nisi porro, vitae tempore beatae
                     inciduntaccusamus nobis. Cupiditate fugit magnam unde harum natus cumque. Commodi recusandae porro
@@ -134,7 +136,7 @@
     <div class="quote">
         <h3>Looking for space?</h3>
         <p>We offer a wide range of sizes</p>
-        <button>Quote</button>
+        <button><a href="quote.html">Quote</a></button>
     </div>
 
 
@@ -202,8 +204,6 @@
             <small>Website created by <a href="#">Liam McAllister</a></small>
         </div>
     </footer>
-
-
 
 
 
